fix horizontal scroll

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
